
name:                sql-driver-race
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              AndrewRademacher
maintainer:          andrewrademacher@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable race
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    build-depends:      rerebase                >=1     && <2
                    ,   criterion               >=1.0   && <1.2
                    ,   hasql                   >=0.19  && <0.20
                    ,   hasql-pool              >=0.4   && <0.5
                    ,   postgresql-simple       >=0.4   && <0.6
                    ,   random                  >=1.1   && <1.2
